--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <link rel="stylesheet" href="https://bootswatch.com/4/united/bootstrap.min.css">
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-3">
-    <a class="navbar-brand" href="#">STI PE10 Stats</a>
+    <a class="navbar-brand" href="https://ryangoh83.github.io">Ryan Goh | STI PE10 Stats</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+        
+    <div class="collapse navbar-collapse" id="navbarColor01">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+        <a class="nav-link" href="https://ryangoh.wordpress.com" target ="_blank">Blog <span class="sr-only">(current)</span></a>
+        </li>
+    </ul>
 </nav>
 <body>
     <div class="container">
@@ -46,6 +56,16 @@
 
         </div>
     </div>
+    <footer>
+        <div class="footer-copyright text-center bg-light py-3">©
+            <script type="text/JavaScript">
+            document.write(new Date().getFullYear());
+            </script> Copyright:
+            <a href="https://ryangoh.wordpress.com/" target="_blank">Ryan Goh</a>
+        </div>
+    </footer>
+    
+    <!-- scripts go below this -->
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
