--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
 
             <p>You can check out all my blog posts on the STI's PE10. (<span><a href="https://ryangoh.wordpress.com/category/investing/pe10/" target="_blank">link here</a></span>)</p>
             
+            <p>If you wish to check out the data yourself, you may do so (for non-commericial purposes only!) by clicking on the "Download Data" button.</p>
+
+            <p>The file is in a csv format and contains: (1) the date, (2) STI close, (3) PE, (4) average 10 year earnings (E10), and (5) "implied earnings" which is calculated based on the STI close and PE.</p>
+
+            <a href="rawdata1.csv" download>
+                <button type="button" class="btn btn-secondary">Download Data
+                </button>
+            </a>
+        <hr>
             <br><h3>Versions</h3>
 
             <p>V 0.1 - Right now, it only displays the current PE10, average PE10 and median PE10 in a table.</p>
